Fix footer button align

--- a/src/DateMonth.css
+++ b/src/DateMonth.css
@@ -8,6 +8,7 @@
 .date_month footer {
   border-top: 1px solid lightgrey;
   padding: 8px;
+  text-align: center;
 }
 
 .date_month .btn {
